turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:4: error: Unit does not take parameters
    changeColor(getCouleur())()
                             ^