turtleart.diskfour.DiskFour.scala.code
override def run() {
  for(i<- 1 to 4){
    quartier()
    changeColor(getCouleur())()
  }
}


def quartier() {
  for(i<- 1 to 90){
    avance(100)
    recule(100)
    droite(1)
  }
}

def changeColor(c:Color){
  c match{
    case Color.black => setColor(Color.red)
    case Color.red => setColor(Color.yellow)
    case Color.yellow => setColor(Color.pink)
    case Color.pink => setColor(Color.black)
  }
}